# Sabio

./: .gitignore  LICENSE  README.md  build.sh  implementation_plan.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
client/: index.html
client/src/: App.tsx  main.tsx
client/src/lib/: db.ts  fileBundle.ts  markdown.ts
client/src/styles/: global.css
client/src/types/: app.ts
docs/: README.md  agent_implementation_plan.md  agent_requirements.md  implementation_plan.md  requirements.md
scripts/: start.mjs
server/: Cargo.toml  index.ts
server/parsers/: extractText.ts
server/services/: ollama.ts
server/src/: main.rs
server/src/agent/: agent_loop.rs  mod.rs  routes.rs  storage.rs  tools.rs  types.rs
server/types/: api.ts
server/utils/: errors.ts
shared/: prompt.ts
