[package]
name = "sabio-server"
version = "1.2.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
pdf-extract = "0.9"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
webbrowser = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
